--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 <script src="https://utteranc.es/client.js"
     repo="NrdyBhu1/nrdybhu1.github.io"
     issue-term="title"
-    theme="github-dark"
+    theme="github-light"
     crossorigin="anonymous"
     async>
 </script>
